// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Box component Should Exist 1`] = `
Object {
  "$$typeof": Symbol(react.forward_ref),
  "defaultProps": Object {
    "backgroundColor": null,
    "children": null,
    "className": "",
    "clearfix": false,
    "clipped": false,
    "hidden": false,
    "invisible": false,
    "italic": false,
    "marginless": false,
    "overlay": false,
    "paddingless": false,
    "pull": null,
    "radiusless": false,
    "renderAs": "div",
    "responsive": undefined,
    "shadowless": false,
    "style": Object {},
    "textAlignment": null,
    "textColor": null,
    "textSize": null,
    "textTransform": null,
    "textWeight": null,
    "unselectable": false,
  },
  "propTypes": Object {
    "backgroundColor": [Function],
    "children": [Function],
    "className": [Function],
    "clearfix": [Function],
    "clipped": [Function],
    "hidden": [Function],
    "invisible": [Function],
    "italic": [Function],
    "marginless": [Function],
    "overlay": [Function],
    "paddingless": [Function],
    "pull": [Function],
    "radiusless": [Function],
    "renderAs": [Function],
    "responsive": [Function],
    "shadowless": [Function],
    "style": [Function],
    "textAlignment": [Function],
    "textColor": [Function],
    "textSize": [Function],
    "textTransform": [Function],
    "textWeight": [Function],
    "unselectable": [Function],
  },
  "render": [Function],
}
`;

exports[`Box component Should concat Bulma class with classes in props 1`] = `
<div
  className="loader other-class test"
  style={Object {}}
/>
`;

exports[`Box component Should have box classname 1`] = `
<div
  className="loader"
  style={Object {}}
/>
`;

exports[`Box component Should have custom inline styles 1`] = `
<section
  className="loader"
  style={
    Object {
      "width": 200,
      "zIndex": 1,
    }
  }
/>
`;

exports[`Box component Should render as an html section 1`] = `
<section
  className="loader"
  style={Object {}}
/>
`;
